docs-archive/versioned_docs/version-0.12.1/docs/features.md
---
title: What is DataHub?
slug: /features
custom_edit_url: 'https://github.com/datahub-project/datahub/blob/master/docs/features.md'
---
# What is DataHub?

DataHub is a modern data catalog built to enable end-to-end data discovery, data observability, and data governance.
This extensible metadata platform is built for developers to tame the complexity of their rapidly evolving data ecosystems and for data practitioners to leverage the total value of data within their organization.

## Quickstart

<QuickstartCards/>

## Key Features

<FeatureCardSection/>

## Get Started

### Deployment

To get started with DataHub, you can use a simple CLI command. Alternatively, you can deploy the instance to production using Docker or Helm charts.

- [Quickstart](quickstart.md)
- [Self-hosted DataHub](deploy/kubernetes.md)
- [Managed DataHub](managed-datahub/managed-datahub-overview.md)

### Ingestion

DataHub supports ingestion by UI and CLI.

- [UI-based Ingestion](ui-ingestion.md)
- [CLI-based Ingestion](../metadata-ingestion/cli-ingestion.md)

## Join the Community

For additional information and assistance, feel free to visit one of these channels!

- [Slack](https://datahubspace.slack.com)
- [Blog](https://blog.datahubproject.io/)
- [LinkedIn](https://www.linkedin.com/company/acryl-data/)
- Our champions - [Data Practitioners Guild](/guild/?_gl=1*11cd6n0*_gcl_au*ODQyMTk0NTI5LjE2OTQ2NjI1MjM.)
