docs-archive/versioned_docs/version-1.1.0/docs/features.md
---
hide_title: true
slug: /features
title: What is DataHub?
custom_edit_url: 'https://github.com/datahub-project/datahub/blob/master/docs/features.md'
---

import FeatureCardSection from '@site/src/pages/docs/\_components/FeatureCardSection';
import QuickstartCTA from '@site/src/pages/docs/\_components/QuickstartCTA';

# What is DataHub?

DataHub is a modern data catalog designed to streamline metadata management, data discovery, and data governance. It enables users to efficiently explore and understand their data, track data lineage, profile datasets, and establish data contracts.
This extensible metadata management platform is built for developers to tame the complexity of their rapidly evolving data ecosystems and for data practitioners to leverage the total value of data within their organization.

<p align="center">
    <img 
        alt="DataHub Integrations" 
        src="/img/diagrams/datahub-flow-diagram-light.png" 
        style={{ padding: "2rem" }} 
    />
</p>

## Quickstart

<QuickstartCTA/>

## Key Features

<FeatureCardSection/>

## Get Started

### Deployment

To get started with DataHub, you can use a simple CLI command. Alternatively, you can deploy the instance to production using Docker or Helm charts.

- [Quickstart](quickstart.md)
- [Self-hosting DataHub with Kubernetes](deploy/kubernetes.md)
- [DataHub Cloud](managed-datahub/managed-datahub-overview.md)

### Ingestion

DataHub supports ingestion by UI and CLI.

- [UI-based Ingestion](ui-ingestion.md)
- [CLI-based Ingestion](../metadata-ingestion/cli-ingestion.md)

## Join the Community

For additional information and assistance, feel free to visit one of these channels!

- [Slack](https://datahubspace.slack.com)
- [Blog](https://medium.com/datahub-project/)
- [LinkedIn](https://www.linkedin.com/company/acryl-data/)
- Our champions - [Data Practitioners Guild](/guild/)
